public_access/bastion_host/bastion_host_main.tf
# Creating Security Group 
resource "aws_security_group" "public_access_sg" {
  vpc_id = var.vpc_id
# Inbound Rules
  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
# HTTPS access from anywhere
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
   ingress {
    from_port   = 3128
    to_port     = 3128
    protocol    = "tcp"
    cidr_blocks = ["172.2.0.0/16"]
  }
# SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
# Outbound Rules
  # Internet access to anywhere
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
tags = {
    Name = "Web SG"
  }
}


# Creating 1st EC2 instance in Public Subnet
resource "aws_instance" "demoinstance" {
  ami                         = "ami-087c17d1fe0178315"
  instance_type               = "t2.micro"
  #count                       = 1
  key_name                    = var.key_name
  vpc_security_group_ids      = [aws_security_group.public_access_sg.id]
  subnet_id                   = var.subnet_id
  associate_public_ip_address = true
  user_data                   =  file("${path.module}/data.sh") #"${pafile("data.sh")}"
tags = {
    Name = "My Public Instance"
  }
}
